# phishing-service

./: .env  .gitignore  Dockerfile  Dockerfile.api  README.md  crontab  docker-compose.yml  pyproject.toml
phishing_service/: api.py  fetch_txt.py  main.py
phishing_service/database/: database.py  models.py
